--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
                 </div>
                 <div class="col-lg-6 col-sm-9 col-12">
                     <ul class="text-right">
-                        <li><a href="index.html">Home</a> </li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="{% url 'index' %}">Home</a> </li>
+                        <li><a href="{% url 'about' %}">About</a></li>
                         <li><a href="register.html">Register</a></li>
                         <li><a href="my_profile.html">My Account</a></li>
                         <li><a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span>5</span></li>
