--- a/static/css/main.css
+++ b/static/css/main.css
@@ -292,13 +292,30 @@ nav .hidden-xs {
     top: 60%;
 }
 
-.banner .carousel-indicators > li {
+/* .banner .carousel-indicators > li {
     width: 12px;
     height: 12px;
     border-radius: 100px;
     background-color: #ffffff;
     border-color: #ffffff;
-    /* opacity: .7; */
+
+} */
+.banner .carousel-indicators > li {
+	box-sizing: content-box;
+	-ms-flex: 0 1 auto;
+	flex: 0 1 auto;
+	width: 30px;
+	height: 3px;
+	margin-right: 3px;
+	margin-left: 3px;
+	text-indent: -999px;
+	cursor: pointer;
+	background-color: #fff;
+	background-clip: padding-box;
+	border-top: 10px solid transparent;
+	border-bottom: 10px solid transparent;
+	opacity: .5;
+	transition: opacity .6s ease;
 }
 
 .banner .carousel-indicators > li.active {
@@ -3630,3 +3647,13 @@ button {
 /*== 320px Media Queries Styles ==*/
 
 @media screen and (max-width: 320px) {}
+
+#fill_database h3 {
+    color: #ee2d27;
+    font-size: 33px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-transform: capitalize;
+    font-weight: 600;
+    font-family: 'Black Ops One', cursive;
+}
