--- a/templates/about.html
+++ b/templates/about.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block title %}
     AboutPage
 {% endblock title %}
 
 {% block container %}
     <!-- About Section Start -->
+
     <div id="about-us">
         <div class="container">
-            <h5><a href="index.html">Home</a><span>/</span><a href="products.html">Category</a><span>/</span><a href="blog.html">Blog</a></h5>
+            <h5><a href="{% url 'index' %}">Home</a><span>/</span>
+                <a href="products.html">Category</a><span>/</span>
+                <a href="blog.html">Blog</a></h5>
         </div>
         <hr>
+
         <div class="container">
+
             <h3 data-aos="fade-up" data-aos-delay="300">About us</h3>
+
             <div class="row" style="margin-right: 0; margin-left: 0;" data-aos="fade-up" data-aos-delay="500">
                 <div>
                     <img src="{% static 'images/about.jpg' %}" alt="about-bg" class="thumbnail image">
