--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
     <meta name="author" content="">
     <title>{% block title %}{% endblock title %}</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|Black+Ops+One|Montserrat:100,200,300,400,500,600,700" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
@@ -33,14 +34,18 @@
                     <ul class="text-right">
                         <li><a href="{% url 'index' %}">Home</a> </li>
                         <li><a href="{% url 'about' %}">About</a></li>
-                        <li><a href="{% url 'register' %}">Register</a></li>
+                        <li><a href="{% url 'shop' %}">Shop</a></li>
+
                     {% if user.is_authenticated %}
-                        <li><a href="#">{{ user.username }}</a></li>
-                        <li><a href="{% url 'logout' %}">logout</a></li>
+                        {% if user.is_staff %}
+                            <li><a href="{% url 'fill_database' %}">Fill products</a></li>
+                        {% endif %}
+                        <li><a href="{% url 'logout' %}">{{ user.username }} logout</a></li>
                     {% else %}
+                        <li><a href="{% url 'register' %}">Register</a></li>
                         <li><a href="{% url 'login' %}">Login</a></li>
                     {% endif %}
-                        <li><a href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span>5</span></li>
+                        <li><a href="{% url 'cart_view' %}"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span>5</span></li>
                     </ul>
                 </div>
             </div>
