--- a/templates/shop/products.html
+++ b/templates/shop/products.html
@@ -24,7 +24,7 @@
                 {% for product in object_list %}
                 <div class="col-lg-3 col-md-6 col-12 card ">
                     <figure>
-                        <a href="#"><img src="{{ product.image_url }}" alt="" class="card-img-top img-thumbnail border-0" /></a>
+                        <a href="{% url 'shop_detail' product.pk %}"><img src="{{ product.image_url }}" alt="" class="card-img-top img-thumbnail border-0" /></a>
                    <!-- <div class="sales-tag">
                             <p>Sale!</p>
                         </div> -->
@@ -32,7 +32,7 @@
 
                             <div class="row">
                                 <div class="col">
-                                    <h5><a href="product_single.html">{{ product.name }}</a></h5>
+                                    <h5><a href="{% url 'shop_detail' product.pk %}">{{ product.name }}</a></h5>
                                 </div>
                             </div>
 
@@ -43,18 +43,18 @@
                             </div>
 
                             <div class="row d-flex  card-footer bg-white px-0">
-
+                            <form method="post" action="{% url 'add_item_to_cart' product.pk %}">
                                 <div class="col-5">{% csrf_token %}
                                     <input type="number" name="quantity" value="1" min="1"
-                                           required id="id_quantity" class="form-control mx-2">
+                                           required id="id_quantity" class="form-control mx-2"/>
                                 </div>
 
                                 <div class="col">
-                                    <button type="button" class="btn btn-outline-success">
+                                    <button type="submit" class="btn btn-outline-success">
                                         BUY NOW
                                     </button>
                                 </div>
-                            </div>
+                            </form></div>
 
                         </figcaption>
                     </figure>
